# third_party_mimalloc

./: BUILD.gn  CMakeLists.txt  OAT.xml  README.OpenSource  README_zh.md  bundle.json
include/: mimalloc-internal.h  mimalloc-types.h  mimalloc.h
src/: alloc-override.c  alloc-posix.c  alloc.c  heap.c  init.c  options.c  os.c  page.c  segment.c  stats.c
test/: BUILD.gn  barrier.hpp  test-backtrace.c  test-disable.cpp  test-info.c  test-mallinfo2.c  test-malloc_iterate.cpp  test-mallopt.c  test-stats-print.c
test/perfomance/: README.md  bench-malloc-thread.c  random.h  xmalloc-test.c
