import("//build/ohos.gni")

config("libmimalloc_config") {
  include_dirs = [ "include" ]

  cflags = [ 
    "-std=c11",
    "-Wno-unused-variable",
    "-Wno-uninitialized",
    "-Qunused-arguments",
    "-Wa,--noexecstack",
    "-Werror=implicit-function-declaration",
    "-Werror=implicit-int",
    "-Werror=pointer-arith",
    "-Werror=pointer-sign",
    "-fdata-sections",
    "-ffreestanding",
    "-ffunction-sections",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-fomit-frame-pointer",
    "-frounding-math",
    "-pipe",
    "-DMI_DEBUG=0",
    "-Wno-unsupported-floating-point-opt",
    "-Wno-bitwise-op-parentheses"
  ]
}

ohos_shared_library("libmimalloc_shared") {
  configs = [ ":libmimalloc_config" ]

  license_file = "./NOTICE"

  sources = [
    "src/static.c"
  ]

  cflags = [ "-fPIC" ]

  defines = [
      "MI_MALLOC_OVERRIDE",
      "MI_SHARED_LIB",
      "MI_SHARED_LIB_EXPORT",
      "MI_TLS_PTHREAD",
      "mimalloc_EXPORTS"
  ]

  install_enable = true
  subsystem_name = "thirdparty"
  part_name = "mimalloc"
}

ohos_static_library("libmimalloc_static") {
  configs = [ ":libmimalloc_config" ]

  license_file = "./NOTICE"

  sources = [
    "src/static.c"
  ]

  defines = [
    "MI_TLS_PTHREAD",
    "mimalloc_EXPORTS"
  ]

  subsystem_name = "thirdparty"
  part_name = "mimalloc"
}
