import("//build/ohos.gni")

config("libmimalloc_config") {
  include_dirs = [ "include" ]

  cflags = [ 
    "-std=c11",
    "-Wno-unused-variable",
    "-Wno-uninitialized",
    "-Qunused-arguments",
    "-Wa,--noexecstack",
    "-Werror=implicit-function-declaration",
    "-Werror=implicit-int",
    "-Werror=pointer-arith",
    "-Werror=pointer-sign",
    "-fdata-sections",
    "-ffreestanding",
    "-ffunction-sections",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-fomit-frame-pointer",
    "-frounding-math",
    "-pipe",
    "-Wno-unsupported-floating-point-opt",
    "-Wno-bitwise-op-parentheses",
    "-DMI_DEBUG=0",
    "-DMI_STAT=2"
  ]
}

ohos_shared_library("libmimalloc_shared") {
  configs = [ ":libmimalloc_config" ]

  license_file = "./NOTICE"

  sources = [
    "src/static.c"
  ]

  cflags = [ "-fPIC" ]

  defines = [
      "MI_MALLOC_OVERRIDE",
      "MI_SHARED_LIB",
      "MI_SHARED_LIB_EXPORT",
      "MI_TLS_PTHREAD",
      "MI_USE_SYNCHRONIZED_ITERATE",
      "__OHOS__",
      "mimalloc_EXPORTS"
  ]

  install_enable = true
  subsystem_name = "thirdparty"
  part_name = "mimalloc"
}

ohos_static_library("libmimalloc_static") {
  configs = [ ":libmimalloc_config" ]

  license_file = "./NOTICE"

  sources = [
    "src/static.c"
  ]

  defines = [
    "MI_MALLOC_OVERRIDE",
    "MI_TLS_PTHREAD",
    "MI_USE_SYNCHRONIZED_ITERATE",
    "__OHOS__",
    "mimalloc_EXPORTS"
  ]

  subsystem_name = "thirdparty"
  part_name = "mimalloc"
}

group("mimalloc_test") {
  testonly = true
  deps = [
    "test:mimalloc_test"
  ]
}
